--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,19 @@ environment:
 dependencies:
   permission_handler: ^12.0.1
   flutter_blue_plus: ^1.35.5
+  tflite_flutter: ^0.11.0
+  telephony:
+  intl:
+  geolocator:
+  path:
+  sqflite:
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
 
 dev_dependencies:
   flutter_test:
@@ -53,15 +60,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/models/crash_model.tflite
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
