--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   telephony:
   intl:
   geolocator:
+  vibration:
+  audioplayers:
   path:
   sqflite:
   flutter:
@@ -42,6 +44,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  path_provider: ^2.1.5
+  share_plus: ^12.0.0
+  shared_preferences: ^2.5.3
 
 
 dev_dependencies:
@@ -68,6 +73,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/models/crash_model.tflite
+    - assets/models/scaler.json
+    - assets/sounds/alarm.mp3
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
